--- a/.config/metapac/config.toml
+++ b/.config/metapac/config.toml
@@ -9,7 +9,7 @@
 # Backends to enable. These will be merged with any hostname-specific backends
 # from the [hostname_enabled_backends] config table.
 # Default: []
-enabled_backends = ["flatpak", "cargo"]
+enabled_backends = ["flatpak"]
 
 # If this is `false` all toml files recursively found in the groups folder
 # will be used as group files.
@@ -29,7 +29,7 @@ fedora = ["dnf"]
 # Relative paths are relative to the groups folder.
 # Default: None
 [hostname_groups]
-fedora = ["base", "gaming", "cachyos", "dev-system", "flatpak", "topgrade", "xariann-tools"]
+fedora = ["base", "gaming", "cachyos", "dev-system", "topgrade", "xariann-tools", "flatpak"]
 # archbtw = ["base", "gaming"]
 
 [arch]
