Added meld + rpmconf to clean up conf files

--- a/.config/metapac/groups/base.toml
+++ b/.config/metapac/groups/base.toml
@@ -115,7 +115,7 @@ dnf = [
   "filesystem",
   "firefox",
   "firewalld",
-  "firewall-config"
+  "firewall-config",
   "fish",
   "flatseal",
   "flex",
