--- a/.config/metapac/groups/dev-system.toml
+++ b/.config/metapac/groups/dev-system.toml
@@ -2,7 +2,9 @@ dnf = [
   "distrobox",
   "fedora-packager",
   "fedpkg",
-  "mock",
-  "just",
   "gum",
+  "just",
+  "meld",
+  "mock", 
+  "rpmconf",
 ]
