--- a/.config/metapac/groups/flatpak.toml
+++ b/.config/metapac/groups/flatpak.toml
@@ -1,26 +1,27 @@
 flatpak = [
-  { package = "be.alexandervanhee.gradia" },
-  { package = "com.discordapp.Discord" },
-  { package = "com.github.Matoking.protontricks" },
-  { package = "com.mattjakeman.ExtensionManager" },
-  { package = "com.obsproject.Studio" },
-  { package = "com.ranfdev.DistroShelf" },
-  { package = "io.github.Faugus.faugus-launcher" },
-  { package = "io.github.flattool.Ignition" },
-  { package = "io.github.flattool.Warehouse" },
-  { package = "io.github.tobagin.keysmith" },
-  { package = "io.github.ungoogled_software.ungoogled_chromium" },
-  { package = "io.podman_desktop.PodmanDesktop" },
-  { package = "it.mijorus.gearlever" },
-  { package = "net.davidotek.pupgui2" },
-  { package = "org.localsend.localsend_app" },
-  { package = "org.onlyoffice.desktopeditors" },
-  { package = "page.tesk.Refine" },
-  { package = "com.visualstudio.code" },
-  { package = "org.gnome.World.PikaBackup" },
-  { package = "io.github.radiolamp.mangojuice" },
-  { package = "io.github.fabrialberio.pinapp" },
-  { package = "io.github.swordpuffin.rewaita" },
-  { package = "io.gitlab.adhami3310.Impression" },
+  { package = "be.alexandervanhee.gradia", options = { systemwide = true } },
+  { package = "com.discordapp.Discord", options = { systemwide = true } },
+  { package = "com.github.Matoking.protontricks", options = { systemwide = true } },
+  { package = "com.mattjakeman.ExtensionManager", options = { systemwide = true } },
+  { package = "com.obsproject.Studio", options = { systemwide = true } },
+  { package = "com.ranfdev.DistroShelf", options = { systemwide = true } },
+  { package = "io.github.Faugus.faugus-launcher", options = { systemwide = true } },
+  { package = "io.github.flattool.Ignition", options = { systemwide = true } },
+  { package = "io.github.flattool.Warehouse", options = { systemwide = true } },
+  { package = "io.github.tobagin.keysmith", options = { systemwide = true } },
+  { package = "io.github.ungoogled_software.ungoogled_chromium", options = { systemwide = true } },
+  { package = "io.podman_desktop.PodmanDesktop", options = { systemwide = true } },
+  { package = "it.mijorus.gearlever", options = { systemwide = true } },
+  { package = "net.davidotek.pupgui2", options = { systemwide = true } },
+  { package = "org.localsend.localsend_app", options = { systemwide = true } },
+  { package = "org.onlyoffice.desktopeditors", options = { systemwide = true } },
+  { package = "page.tesk.Refine", options = { systemwide = true } },
+  { package = "com.visualstudio.code", options = { systemwide = true } },
+  { package = "org.gnome.World.PikaBackup", options = { systemwide = true } },
+  { package = "io.github.radiolamp.mangojuice", options = { systemwide = true } },
+  { package = "io.github.fabrialberio.pinapp", options = { systemwide = true } },
+  { package = "io.github.swordpuffin.rewaita", options = { systemwide = true } },
+  { package = "io.gitlab.adhami3310.Impression", options = { systemwide = true } },
   { package = "io.github.vikdevelop.SaveDesktop", options = { systemwide = true } },
+  { package = "io.missioncenter.MissionCenter", options = { systemwide = true } },
 ]
