--- a/.config/metapac/config.toml
+++ b/.config/metapac/config.toml
@@ -29,7 +29,7 @@ fedora = ["dnf"]
 # Relative paths are relative to the groups folder.
 # Default: None
 [hostname_groups]
-fedora = ["base", "gaming", "cachyos", "dev-system", "topgrade", "xariann-tools", "flatpak", "cargo"]
+fedora = ["base", "gaming", "cachyos", "dev-system", "topgrade", "xariann-tools", "rpm-tools", "flatpak", "cargo"]
 # archbtw = ["base", "gaming"]
 
 [arch]
