--- a/.config/metapac/groups/flatpak.toml
+++ b/.config/metapac/groups/flatpak.toml
@@ -3,4 +3,5 @@ flatpak = { packages = [
   { name = "system:com.mattjakeman.ExtensionManager", options = { remote = "flathub" } },
   { name = "system:com.vysp3r.ProtonPlus", options = { remote = "flathub" } },
   { name = "system:org.altlinux.Tuner", options = { remote = "flathub" } },
+  { name = "system:org.gnome.World.PikaBackup", options = { remote = "flathub" } },
 ] }
