--- a/.config/metapac/groups/copr-cachyos.toml
+++ b/.config/metapac/groups/copr-cachyos.toml
@@ -1,7 +1,7 @@
 dnf = { repos = [
   "copr.fedorainfracloud.org/bieszczaders/kernel-cachyos-addons",
 ], packages = [
-  # "cachyos-settings",
+  "cachyos-settings",
   "scx-manager",
   "scx-scheds",
   "scx-tools",
