--- a/.config/metapac/groups/flatpak.toml
+++ b/.config/metapac/groups/flatpak.toml
@@ -4,6 +4,6 @@ flatpak = { repos = [
   { name = "system:com.discordapp.Discord", options = { remote = "flathub" } },
   { name = "system:com.mattjakeman.ExtensionManager", options = { remote = "flathub" } },
   { name = "system:com.vysp3r.ProtonPlus", options = { remote = "flathub" } },
-  { name = "system:org.altlinux.Tuner", options = { remote = "flathub" } },
   { name = "system:org.gnome.World.PikaBackup", options = { remote = "flathub" } },
+  { name = "system:page.tesk.Refine", options = { remote = "flathub" } },
 ] }
